# image-converter

./: .dockerignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  MEMORY.md  PROJECT_STRUCTURE.md  README.md  TESTING.md  docker-compose.yml
docs/: README.md  architecture.md  memory.md  release-notes.md  testing.md
scripts/: check.sh
src/: batch.rs  converter.rs  error.rs  format.rs  interactive.rs  lib.rs  main.rs  utils.rs
src/tests/: integration_tests.rs  mod.rs  test_utils.rs  unit_tests.rs
tests/: interactive_cli.rs
